--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -26,7 +26,107 @@
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
-         <widget class="QTableWidget" name="transferTable"/>
+         <layout class="QHBoxLayout" name="horizontalLayout_5">
+          <item>
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QLabel" name="transferSearchLabel">
+            <property name="text">
+             <string>Search:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="transferSearch"/>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <item>
+           <widget class="QTableView" name="transferView"/>
+          </item>
+          <item>
+           <widget class="QWidget" name="widget" native="true">
+            <property name="minimumSize">
+             <size>
+              <width>100</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>200</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_3">
+             <item>
+              <widget class="QLabel" name="label_8">
+               <property name="text">
+                <string>From:</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="transferFrom">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="label_6">
+               <property name="text">
+                <string>Tags:</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="TagEdit" name="transferTags"/>
+             </item>
+             <item>
+              <widget class="QLabel" name="label_7">
+               <property name="text">
+                <string>Account Tags:</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="transferTagsFromAccounts">
+               <property name="text">
+                <string/>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="verticalSpacer_2">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>40</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
@@ -53,7 +153,7 @@
           <item>
            <widget class="QLabel" name="accountSearchLabel">
             <property name="text">
-             <string>Search</string>
+             <string>Search:</string>
             </property>
            </widget>
           </item>
@@ -65,17 +165,13 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
-           <widget class="QTableView" name="accountView">
-            <property name="focusPolicy">
-             <enum>Qt::NoFocus</enum>
-            </property>
-           </widget>
+           <widget class="QTableView" name="accountView"/>
           </item>
           <item>
            <widget class="QWidget" name="accountDetails" native="true">
             <property name="minimumSize">
              <size>
-              <width>0</width>
+              <width>100</width>
               <height>0</height>
              </size>
             </property>
@@ -287,7 +383,6 @@
   <tabstop>accountSearch</tabstop>
   <tabstop>accountName</tabstop>
   <tabstop>tabWidget</tabstop>
-  <tabstop>transferTable</tabstop>
  </tabstops>
  <resources/>
  <connections/>
