--- a/sql/evolutions.qrc
+++ b/sql/evolutions.qrc
@@ -3,5 +3,6 @@
         <file>evolutions/0.sql</file>
         <file>evolutions/1.sql</file>
         <file>evolutions/2.sql</file>
+        <file>evolutions/3.sql</file>
     </qresource>
 </RCC>
