--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Moneyphant</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -610,14 +610,20 @@
     </property>
     <addaction name="actionExport_Transfers"/>
    </widget>
-   <widget class="QMenu" name="menuAccounts">
+   <widget class="QMenu" name="menuEdit">
     <property name="title">
-     <string>Accounts</string>
+     <string>Edit</string>
     </property>
     <addaction name="actionMerge_Selected_Accounts"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+   </widget>
    <addaction name="menuFile"/>
-   <addaction name="menuAccounts"/>
+   <addaction name="menuEdit"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
