Switched to using my own C++ common library mr-lib
A lot of the code in src/globals I also use in other projects.
Therefore it is only logical to put it into a library.

--- a/sql/evolutions.qrc
+++ b/sql/evolutions.qrc
@@ -4,5 +4,6 @@
         <file>evolutions/1.sql</file>
         <file>evolutions/2.sql</file>
         <file>evolutions/3.sql</file>
+        <file>evolutions/4.sql</file>
     </qresource>
 </RCC>
