--- a/src/ui/StatementImporterDialog.ui
+++ b/src/ui/StatementImporterDialog.ui
@@ -146,7 +146,7 @@
       </widget>
      </item>
      <item row="4" column="1">
-      <widget class="QLineEdit" name="lineEdit">
+      <widget class="QLineEdit" name="dateFormat">
        <property name="text">
         <string>dd.MM.yy</string>
        </property>
