--- a/sql/evolutions.qrc
+++ b/sql/evolutions.qrc
@@ -5,5 +5,6 @@
         <file>evolutions/2.sql</file>
         <file>evolutions/3.sql</file>
         <file>evolutions/4.sql</file>
+        <file>evolutions/5.sql</file>
     </qresource>
 </RCC>
