--- a/src/ui/StatementImporterDialog.ui
+++ b/src/ui/StatementImporterDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>466</width>
-    <height>373</height>
+    <height>428</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -122,7 +122,7 @@
      <item row="2" column="0">
       <widget class="QLabel" name="label_4">
        <property name="text">
-        <string>Text qualifier:</string>
+        <string>Text Qualifier:</string>
        </property>
       </widget>
      </item>
@@ -188,6 +188,16 @@
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QCheckBox" name="watchFile">
+       <property name="text">
+        <string>Watch file for updates</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
      <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
